--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.44.1",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.5",
+    "swiper": "^9.3.2",
     "typescript": "5.0.4",
     "yup": "^1.2.0"
   },
