--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-hook-form": "^7.44.1",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.5",
+    "stylis": "^4.2.0",
+    "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^9.3.2",
     "typescript": "5.0.4",
     "yup": "^1.2.0"
