--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-cookie": "^3.0.5",
     "next": "13.4.3",
     "next-redux-wrapper": "^8.1.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.1",
