--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.1",
     "react-hot-toast": "^2.4.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "stylis": "^4.2.0",
     "stylis-plugin-rtl": "^2.1.1",
