--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.44.1",
     "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0",
