slider is complete

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.13.2",
     "@mui/x-data-grid": "^6.6.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@splidejs/react-splide": "^0.7.12",
     "@tanstack/react-query": "^4.29.7",
     "@tanstack/react-query-devtools": "^4.29.12",
     "@types/node": "20.2.3",
@@ -38,7 +39,7 @@
     "react-redux": "^8.0.5",
     "stylis": "^4.2.0",
     "stylis-plugin-rtl": "^2.1.1",
-    "swiper": "^9.3.2",
+    "swiper": "^9.4.1",
     "typescript": "5.0.4",
     "yup": "^1.2.0"
   },
