--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "html-react-parser": "^4.0.0",
     "js-cookie": "^3.0.5",
     "next": "13.4.3",
     "next-redux-wrapper": "^8.1.0",
