--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
     "stylis": "^4.2.0",
     "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^9.4.1",
